--- a/fixed-navigation-bar.css
+++ b/fixed-navigation-bar.css
@@ -6,7 +6,7 @@
   z-index: 9999;
   width: 100%;
   height: 50px;
-  background-color: #00a087;
+  background-color: black;
 }
 
 /* The element at the top of the page right after the fixed navigation bar
@@ -22,7 +22,7 @@
 }
 .menu {
   width: 90%;
-  max-width: 960px;
+  max-width: 80%;
   margin: 0 auto;
 }
 .menu a, .menu a:visited {
@@ -80,7 +80,7 @@ a.sitename, a:visited.sitename {
     display: none; 
     width: 100%;
     margin-top: 50px;
-    background-color: #008378;
+    background-color: black;
   }
   .menu-items li {
     display: block;
