--- a/dndtime.css
+++ b/dndtime.css
@@ -34,6 +34,8 @@
 	text-align: center;
 	color:white;
 	text-shadow: 1px 1px 2px #000000,-1px 1px 2px #000000,1px -1px 2px #000000,-1px -1px 2px #000000;
+	-webkit-text-stroke-width: 1px;
+	-webkit-text-stroke-color: black;
 	}
 	.HeadFont {
 	font-family:MrEavesSmallCaps;
