--- a/dndtime.css
+++ b/dndtime.css
@@ -1,84 +1,87 @@
-/* Fonts created by /u/Solbera on Reddit */
-	@font-face {
-	font-family: "NodestoCaps";
-	src: url("/fonts/NodestoCapsCondensedBold.woff2") format("woff2"), url("/fonts/NodestoCapsCondensedBold.woff") format("woff");
-	}
-	@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600|Spectral|Spectral+SC:600');
-	.TitleFont {
-	font-family:NodestoCaps;
-	font-weight:normal;
-	font-size: calc(24px + 5.0vw);
-	text-align: center;
-	color:white;
-	text-shadow: 1px 1px 2px #000000,-1px 1px 2px #000000,1px -1px 2px #000000,-1px -1px 2px #000000;
-	-webkit-text-stroke-width: 1px;
-	-webkit-text-stroke-color: black;
-	}
-	.HeadFont {
-	font-family:MrEavesSmallCaps;
-	font-weight:bold;
-	font-size: calc(24px + 0.9vw);
-	text-align: left;
-	color: #58180d;
-	border-bottom: 2px solid #cdb376;
-	display: inline-block;
-	line-height: 0.8;
-	}
-	.SubHeadFont {
-	font-family:MrEavesSmallCaps;
-	font-weight:bold;
-	font-size: calc(20px + 0.8vw);
-	text-align: left;
-	color: #58180d;
-	}
-	.BodyFont {
-	font-family:BookInsanity;
-	font-weight:normal;
-	font-size: calc(14px + 0.4vw);
-	text-align: left;
-	color: black;
-	}
-	.TableTitleFont {
-	font-family:ScalySansCapsBold;
-	font-weight:normal;
-	font-size: calc(11pt + .6vw);
-	text-align: left;
-	color: black;
-	}
-	table {
-		width:100%;
-	}
-	table, th, td {
-		border-collapse: collapse;
-	}
-	th, td {
-		padding: 5px;
-		font-family:ScalySans;
-		font-weight:normal;
-		font-size: calc(8.5pt + .4vw);
-		text-align: left;
-		color: black;
-	}
-	table tr:nth-child(even) {
-		background-color:#e3e5bd;
-	}
-	table th {
-		font-family:ScalySansBold;
-		font-weight:bold;
-		font-size: calc(8.5pt + .4vw);
-		text-align: left;
-		color: black;
-	}
-	#audioplayer {
-		width: 325px;
-	}
-	hr {
-	height:2px;
-	border:none;
-	color:rgb(0,0,0);
-	background-color:rgb(0,0,0);
-	opacity:0.3;
-	}
-	body {
-	background-image: url("Graphics/Background.jpg");
-	}
+@font-face {
+  font-family: "NodestoCaps";
+  src: url("/fonts/NodestoCapsCondensedBold.woff2") format("woff2"), url("/fonts/NodestoCapsCondensedBold.woff") format("woff");
+}
+/* Font created by /u/Solbera on Reddit */
+
+@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600|Spectral|Spectral+SC:600');
+/* font-family: 'Source Sans Pro', sans-serif; font-family: 'Spectral', serif; font-family: 'Spectral SC', serif; */
+
+.TitleFont {
+  font-family: NodestoCaps;
+  font-weight: normal;
+  font-size: calc(24px + 5.0vw);
+  text-align: center;
+  color: white;
+  text-shadow: 1px 1px 2px #000000, -1px 1px 2px #000000, 1px -1px 2px #000000, -1px -1px 2px #000000;
+  -webkit-text-stroke-width: 1px;
+  -webkit-text-stroke-color: black;
+}
+.HeadFont {
+  font-family: MrEavesSmallCaps;
+  font-weight: bold;
+  font-size: calc(24px + 0.9vw);
+  text-align: left;
+  color: #58180d;
+  border-bottom: 2px solid #cdb376;
+  display: inline-block;
+  line-height: 0.8;
+}
+.SubHeadFont {
+  font-family: MrEavesSmallCaps;
+  font-weight: bold;
+  font-size: calc(20px + 0.8vw);
+  text-align: left;
+  color: #58180d;
+}
+.BodyFont {
+  font-family: BookInsanity;
+  font-weight: normal;
+  font-size: calc(14px + 0.4vw);
+  text-align: left;
+  color: black;
+}
+.TableTitleFont {
+  font-family: ScalySansCapsBold;
+  font-weight: normal;
+  font-size: calc(11pt + .6vw);
+  text-align: left;
+  color: black;
+}
+table {
+  width: 100%;
+}
+table, th, td {
+  border-collapse: collapse;
+}
+th, td {
+  padding: 5px;
+  font-family: ScalySans;
+  font-weight: normal;
+  font-size: calc(8.5pt + .4vw);
+  text-align: left;
+  color: black;
+}
+table tr:nth-child(even) {
+  background-color: #e3e5bd;
+}
+table th {
+  font-family: ScalySansBold;
+  font-weight: bold;
+  font-size: calc(8.5pt + .4vw);
+  text-align: left;
+  color: black;
+}
+#audioplayer {
+  width: 325px;
+}
+hr {
+  height: 2px;
+  border: none;
+  color: rgb(0, 0, 0);
+  background-color: rgb(0, 0, 0);
+  opacity: 0.3;
+}
+body {
+  background-image: url("Graphics/Background.jpg");
+}
