--- a/assets/dndtime.css
+++ b/assets/dndtime.css
@@ -83,7 +83,7 @@ hr {
 	opacity: 0.3;
 }
 body {
-	background: transparent !important;
+	background-image: url(assets/bg.jpg);
 }
 @media screen and (min-width: 1200px) {
 	body {
