--- a/assets/dndtime.css
+++ b/assets/dndtime.css
@@ -160,7 +160,7 @@ body {
 	text-align: left !important;
 }
 .paper {
-	background: #fff;
+	background: #f1f1f1;
 	padding: 30px;
 	position: relative;
 }
