--- a/assets/dndtime.css
+++ b/assets/dndtime.css
@@ -3,20 +3,18 @@
 	font-family: "Nodesto Caps Condensed Bold";
 	src: url("NodestoCapsCondensedBold.woff2") format("woff2");
 }
-#document {
-	background: transparent !important;
-}
-.TitleFont {
+h1 {
 	font-family: Nodesto Caps Condensed Bold;
 	font-weight: normal;
 	font-size: calc(36px + 3.0vw);
 	text-align: center;
 	color: white;
+	line-height: 90%;
 	text-shadow: 1px 1px calc(0.05vw) #000000, -1px 1px calc(0.05vw) #000000, 1px -1px calc(0.05vw) #000000, -1px -1px calc(0.05vw) #000000;
 	-webkit-text-stroke-width: calc(0.1vw);
 	-webkit-text-stroke-color: black;
 }
-.HeadFont {
+h2 {
 	font-family: 'Spectral SC', serif;
 	font-weight: bold;
 	font-size: calc(22px + 0.4vw);
@@ -27,7 +25,7 @@
 	display: inline-block;
 	line-height: 0.9;
 }
-.SubHeadFont {
+h3 {
 	font-family: 'Spectral SC', serif;
 	font-weight: bold;
 	font-size: calc(22px + 0.4vw);
@@ -35,7 +33,23 @@
 	text-align: left;
 	color: #58180d;
 }
-.BodyFont {
+.music {
+	text-align: center;
+	font-size: 10px;
+	margin-top: 5px;
+}
+.DnDTimeAjaxObject {
+	margin-top: 15px;
+}
+p {
+	font-family: 'Spectral', serif;
+	font-weight: normal;
+	font-size: 16px;
+	line-height: 1.25;
+	text-align: left;
+	color: black;
+}
+pre {
 	font-family: 'Spectral', serif;
 	font-weight: normal;
 	font-size: 16px;
@@ -79,14 +93,25 @@ table th {
 	width: 325px;
 }
 hr {
-	height: 2px;
-	border: none;
-	color: rgb(0, 0, 0);
-	background-color: rgb(0, 0, 0);
-	opacity: 0.3;
+    overflow: visible; /* For IE */
+    height: 30px;
+    border-style: solid;
+    border-color: black;
+    border-width: 1px 0 0 0;
+    border-radius: 20px;
+}
+hr:before {
+    display: block;
+    content: "";
+    height: 30px;
+    margin-top: -31px;
+    border-style: solid;
+    border-color: black;
+    border-width: 0 0 1px 0;
+    border-radius: 20px;
 }
 body {
-	background-image: url(bg.jpg);
+	background: #F1F1F1;
 }
 @media screen and (min-width: 1200px) {
 	body {
@@ -162,8 +187,8 @@ body {
 	display: block !important;
 	text-align: left !important;
 }
+
 .paper {
-	/* background: #f1f1f1; */
 	background-image: url(bg.jpg);
 	padding: 30px;
 	height:100%;
@@ -171,7 +196,6 @@ body {
 	overflow: visible;
 }
 .paper, .paper::before, .paper::after {
-	/* Styles to distinguish sheets from one another */
 	box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.25);
 	border: 1px solid #bbb;
 }
@@ -180,7 +204,6 @@ body {
 	position: absolute;
 	height: 99%;
 	width: 99%;
-	/* background: #f1f1f1; */
 	background-image: url(bg.jpg);
 }
 .paper::before {
