--- a/assets/dndtime.css
+++ b/assets/dndtime.css
@@ -3,51 +3,49 @@
 	font-family: "Nodesto Caps Condensed Bold";
 	src: url("NodestoCapsCondensedBold.woff2") format("woff2");
 }
+
 h1 {
-	font-family: Nodesto Caps Condensed Bold;
-	font-weight: normal;
-	font-size: calc(36px + 3.0vw);
-	text-align: center;
-	margin-top: -15px;
 	color: white;
-	line-height: 1.25;
-	margin-top: 10px;
+	font-family: Nodesto Caps Condensed Bold;
+	font-size: calc(36px + 3.0vw);
+	font-weight: normal;
 	margin-bottom: 0px;
+	margin-top: -10px;
+	line-height: 1.25;
+	text-align: center;
 	text-shadow: 1px 1px calc(0.05vw) #000000, -1px 1px calc(0.05vw) #000000, 1px -1px calc(0.05vw) #000000, -1px -1px calc(0.05vw) #000000;
+	text-transform: uppercase;
 	-webkit-text-stroke-width: calc(0.1vw);
 	-webkit-text-stroke-color: black;
 }
+
 h2 {
-	font-family: 'Spectral SC', serif;
-	font-weight: bold;
-	font-size: calc(22px + 0.4vw);
-	font-variant: small-caps;
-	text-align: left;
-	color: #58180d;
-	margin-top: 10px;
-	margin-bottom: 0px;
 	border-bottom: 2px solid #cdb376;
 	display: inline-block;
-	line-height: 0.9;
 }
-h3 {
+
+h2 h3 {
+	color: #58180d;
 	font-family: 'Spectral SC', serif;
-	font-weight: bold;
 	font-size: calc(22px + 0.4vw);
 	font-variant: small-caps;
-	text-align: left;
-	color: #58180d;
-	margin-top: 10px;
+	font-weight: bold;
+	line-height: 0.9;
 	margin-bottom: 0px;
+	margin-top: 10px;
+	text-align: left;
 }
+
 .music {
 	text-align: center;
 	font-size: 10px;
 	margin-top: 5px;
 }
+
 .DnDTimeAjaxObject {
 	margin-top: 15px;
 }
+
 p {
 	font-family: 'Spectral', serif;
 	font-weight: normal;
@@ -58,28 +56,26 @@ p {
 	margin-top: 10px;
 	margin-bottom: 0px;
 }
-pre {
-	font-family: 'Spectral', serif;
-	font-weight: normal;
-	font-size: 16px;
-	line-height: 1.25;
-	text-align: left;
-	color: black;
-}
-.TableTitleFont {
+
+h4 {
 	font-family: 'Source Sans Pro', sans-serif;
 	font-weight: bold;
 	font-size: 22px;
 	font-variant: small-caps;
 	text-align: left;
 	color: black;
+	margin-top: 10px;
+	margin-bottom: 0px;
 }
+
 table {
 	width: 100%;
 }
+
 table, th, td {
 	border-collapse: collapse;
 }
+
 th, td {
 	padding: 5px;
 	font-family: 'Source Sans Pro', sans-serif;
@@ -88,9 +84,11 @@ th, td {
 	text-align: left;
 	color: black;
 }
+
 table tr:nth-child(even) {
 	background-color: #e3e5bd;
 }
+
 table th {
 	font-family: 'Source Sans Pro', sans-serif;
 	font-weight: bold;
@@ -98,41 +96,28 @@ table th {
 	text-align: left;
 	color: black;
 }
+
 #audioplayer {
 	width: 325px;
 }
-hr {
-    overflow: visible; /* For IE */
-    height: 30px;
-    border-style: solid;
-    border-color: black;
-    border-width: 1px 0 0 0;
-    border-radius: 20px;
-}
-hr:before {
-    display: block;
-    content: "";
-    height: 30px;
-    margin-top: -31px;
-    border-style: solid;
-    border-color: black;
-    border-width: 0 0 1px 0;
-    border-radius: 20px;
-}
+
 body {
 	background: #F1F1F1;
 }
+
 @media screen and (min-width: 1200px) {
 	body {
 		width: 1200px;
 		margin: auto;
 	}
 }
+
 .topnav {
 	overflow: hidden;
 	background-color: #333;
 	font-family: 'Source Sans Pro', sans-serif;
 }
+
 .topnav a {
 	float: left;
 	display: block;
@@ -142,55 +127,67 @@ body {
 	text-decoration: none;
 	font-size: 17px;
 }
+
 .topnav a:hover {
 	background-color: #ddd;
 	color: black;
 }
+
 .topnav .icon {
 	float: right;
 	display: block;
 }
+
 .topnav a:not(:nth-child(-n+8)):not(.icon) {
 	display: none;
 }
+
 @media screen and (max-width: 1150px) {
 	.topnav a:not(:nth-child(-n+7)):not(.icon) {
 		display: none;
 	}
 }
+
 @media screen and (max-width: 1000px) {
 	.topnav a:not(:nth-child(-n+6)):not(.icon) {
 		display: none;
 	}
 }
+
 @media screen and (max-width: 800px) {
 	.topnav a:not(:nth-child(-n+5)):not(.icon) {
 		display: none;
 	}
 }
+
 @media screen and (max-width: 725px) {
 	.topnav a:not(:nth-child(-n+4)):not(.icon) {
 		display: none;
 	}
 }
+
 @media screen and (max-width: 600px) {
 	.topnav a:not(:nth-child(-n+3)):not(.icon) {
 		display: none;
 	}
 }
+
 @media screen and (max-width: 425px) {
 	.topnav a:not(:nth-child(-n+2)):not(.icon) {
 		display: none;
 	}
 }
+
 .topnav.responsive {
 	position: relative;
 }
+
 .topnav.responsive .icon {
 	position: absolute;
 	right: 0;
 	top: 0;
 }
+
 .topnav.responsive a {
 	float: none !important;
 	display: block !important;
@@ -200,14 +197,16 @@ body {
 .paper {
 	background-image: url(bg.jpg);
 	padding: 30px;
-	height:100%;
+	height: 100%;
 	position: relative;
 	overflow: visible;
 }
+
 .paper, .paper::before, .paper::after {
 	box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.25);
 	border: 1px solid #bbb;
 }
+
 .paper::before, .paper::after {
 	content: "";
 	position: absolute;
@@ -215,12 +214,14 @@ body {
 	width: 99%;
 	background-image: url(bg.jpg);
 }
+
 .paper::before {
 	right: 15px;
 	top: 0;
 	transform: rotate(-1deg);
 	z-index: -1;
 }
+
 .paper::after {
 	top: 5px;
 	right: -5px;
