--- a/assets/dndtime.css
+++ b/assets/dndtime.css
@@ -8,7 +8,7 @@ h1 {
 	color: white;
 	font-family: Nodesto Caps Condensed Bold;
 	font-size: calc(36px + 3.0vw);
-	font-weight: normal;
+	font-weight: bold;
 	margin-bottom: 0px;
 	margin-top: -10px;
 	line-height: 1.25;
@@ -33,28 +33,22 @@ h2 h3 {
 	line-height: 0.9;
 	margin-bottom: 0px;
 	margin-top: 10px;
-	text-align: left;
 }
 
 .music {
 	text-align: center;
 	font-size: 10px;
+	margin-bottom: 10px;
 	margin-top: 5px;
 }
 
-.DnDTimeAjaxObject {
-	margin-top: 15px;
-}
-
 p {
+	color: black;
 	font-family: 'Spectral', serif;
-	font-weight: normal;
 	font-size: 16px;
 	line-height: 1.25;
-	text-align: left;
-	color: black;
-	margin-top: 10px;
 	margin-bottom: 0px;
+	margin-top: 5px;
 }
 
 h4 {
