--- a/assets/dndtime.css
+++ b/assets/dndtime.css
@@ -41,6 +41,10 @@ h2 {
 	border-bottom: 2px solid #cdb376;
 }
 
+h3 {
+	border-bottom: 2px solid transparent;
+}
+
 .music {
 	text-align: center;
 	font-size: 10px;
