--- a/assets/dndtime.css
+++ b/assets/dndtime.css
@@ -120,8 +120,16 @@ body {
 	overflow: hidden;
 	background-color: #333;
 	font-family: 'Source Sans Pro', sans-serif;
-	position: fixed;
-	top: 0;
+}
+
+.sticky + .paper {
+  padding-top: 60px;
+}
+
+.sticky {
+  position: fixed;
+  top: 0;
+  width: 100%
 }
 
 .topnav a {
