--- a/assets/dndtime.css
+++ b/assets/dndtime.css
@@ -123,13 +123,13 @@ body {
 }
 
 .sticky + .paper {
-  padding-top: 60px;
+	padding-top: 60px;
 }
 
 .sticky {
-  position: fixed;
-  top: 0;
-  width: 100%
+	position: fixed;
+	top: 0;
+	z-index: 1;
 }
 
 .topnav a {
