--- a/assets/dndtime.css
+++ b/assets/dndtime.css
@@ -208,6 +208,13 @@ body {
 	text-align: left !important;
 }
 
+.notpaper {
+	margin-top: 60px;
+	padding: 30px;
+	position: relative;
+	min-height: calc(100vh - 150px);
+}
+
 .paper {
 	background-image: url(bg.jpg);
 	margin-top: 60px;
