--- a/assets/dndtime.css
+++ b/assets/dndtime.css
@@ -106,7 +106,7 @@ table th {
 }
 
 body {
-	background-image: url(bg2.jpg);
+	background-image: url("bg2.jpg");
 }
 
 @media screen and (min-width: 1200px) {
