--- a/assets/dndtime.css
+++ b/assets/dndtime.css
@@ -5,38 +5,38 @@
 }
 
 .tooltip {
-	position: relative;
-	display: inline-block;
+	position: relative !important;
+	display: inline-block !important;
 }
 .tooltip .tooltiptext {
-	visibility: hidden;
-	width: 120px;
-	background-color: #333;
-	color: #fff;
-	text-align: center;
-	border-radius: 6px;
-	padding: 5px 0;
-	position: absolute;
-	z-index: 1;
-	top: 150%;
-	left: 50%;
-	margin-left: -60px;
-	opacity: 0;
-	transition: opacity 0.5s;
+	visibility: hidden !important;
+	width: 120px !important;
+	background-color: #333 !important;
+	color: #fff !important;
+	text-align: center !important;
+	border-radius: 6px !important;
+	padding: 5px 0 !important;
+	position: absolute !important;
+	z-index: 1 !important;
+	top: 150% !important;
+	left: 50% !important;
+	margin-left: -60px !important;
+	opacity: 0 !important;
+	transition: opacity 0.5s !important;
 }
 .tooltip:hover .tooltiptext {
-	visibility: visible;
-	opacity: 1;
+	visibility: visible !important;
+	opacity: 1 !important;
 }
 .tooltip .tooltiptext::after {
-	content: "";
-	position: absolute;
-	bottom: 100%;
-	left: 50%;
-	margin-left: -5px;
-	border-width: 5px;
-	border-style: solid;
-	border-color: transparent transparent #333 transparent;
+	content: "" !important;
+	position: absolute !important;
+	bottom: 100% !important;
+	left: 50% !important;
+	margin-left: -5px !important;
+	border-width: 5px !important;
+	border-style: solid !important;
+	border-color: transparent transparent #333 transparent !important;
 }
 
 .bucks {
