--- a/assets/dndtime.css
+++ b/assets/dndtime.css
@@ -10,6 +10,7 @@
 
 .fabbox {
 	font-size: 8.25vw;
+	margin: auto;
 	width: 95%;
 	-webkit-justify-content: space-between; /* Safari 6.1+ */
 	display: flex;
