--- a/assets/dndtime.css
+++ b/assets/dndtime.css
@@ -19,16 +19,15 @@
 
 .r20 {
 	width: 8.25vw;
-	height: 8.25vw;
+	height: auto;
 }
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 1920px) {
 	.fabbox {
 		font-size: 150px;
 	}
 	.r20 {
 		width: 150px;
-		height: 150px;
 	}
 }
 
