--- a/assets/dndtime.css
+++ b/assets/dndtime.css
@@ -50,11 +50,11 @@ h2, h3 {
 }
 h2 {
 	border-bottom: 2px solid transparent;
-	font-size: calc(22px + 0.4vw);
+	font-size: 28px;
 }
 h3 {
 	border-bottom: 2px solid #cdb376;
-	font-size: calc(16px + 0.4vw);
+	font-size: 24px;
 }
 h4 {
 	font-family: 'Source Sans Pro', sans-serif;
