--- a/assets/dndtime.css
+++ b/assets/dndtime.css
@@ -143,7 +143,7 @@ th, td {
 	colspan=6;
 	padding:1px !important;
 }
-.tablehero tr:nth-child(even){
+.tablehero0 tr:nth-child(even){
 	colspan=6;
 	padding:1px !important;
 	background-color: #FDF1DC !important;
