--- a/assets/dndtime.css
+++ b/assets/dndtime.css
@@ -139,22 +139,11 @@ th, td {
 	text-align: left;
 	color: black;
 }
-.tablehero {
-	colspan=6;
-	padding:1px !important;
-}
-.tablehero0 tr:nth-child(even){
+.chartable tr:nth-child(even){
 	background-color: #FDF1DC !important;
 }
-table tr:nth-child(even) {
+.pbhtable tr:nth-child(even) {
 	background-color: #e3e5bd;
-}
-table th {
-	font-family: 'Source Sans Pro', sans-serif;
-	font-weight: bold;
-	font-size: 16px;
-	text-align: left;
-	color: black;
 }
 .topnav {
 	overflow: hidden;
@@ -173,8 +162,7 @@ table th {
 	text-align: center;
 	padding: 14px 16px;
 	text-decoration: none;
-	font-size: 17px;
-	
+	font-size: 17px;	
 }
 .topnav a:hover {
 	background-color: #ddd;
