--- a/assets/dndtime.css
+++ b/assets/dndtime.css
@@ -38,7 +38,7 @@ h1 {
 	-webkit-text-stroke-width: calc(0.1vw);
 	-webkit-text-stroke-color: black;
 }
-h2, h3 {
+h2, h3, h5 {
 	color: #58180d;
 	display: inline-block;
 	font-family: 'Spectral SC', serif;
@@ -55,6 +55,10 @@ h2 {
 h3 {
 	border-bottom: 2px solid #cdb376;
 	font-size: 24px;
+}
+h5 {
+	font-size: 28px;
+	margin-top: 0px !important;
 }
 h4 {
 	font-family: 'Source Sans Pro', sans-serif;
@@ -132,12 +136,14 @@ table, th, td {
 	border-collapse: collapse;
 }
 th, td {
-	padding: 5px;
 	font-family: 'Source Sans Pro', sans-serif;
 	font-weight: normal;
 	font-size: 16px;
 	text-align: left;
 	color: black;
+}
+.list-table {
+	padding: 5px;
 }
 .list-table tr:nth-child(even) {
 	background-color: #e3e5bd;
