--- a/assets/dndtime.css
+++ b/assets/dndtime.css
@@ -137,10 +137,12 @@ table, th, td {
 }
 th, td {
 	font-family: 'Source Sans Pro', sans-serif;
-	font-weight: normal;
 	font-size: 16px;
 	text-align: left;
 	color: black;
+}
+th {
+	font-weight: bold;
 }
 .list-table {
 	padding: 5px;
