--- a/assets/dndtime.css
+++ b/assets/dndtime.css
@@ -140,10 +140,13 @@ table, th, td {
 th, td {
 	font-family: 'Source Sans Pro', sans-serif;
 	font-size: 16px;
+	font-weight: normal;
 	text-align: left;
 	color: black;
 }
 th {
+	font-family: 'Source Sans Pro', sans-serif;
+	font-size: 16px;
 	font-weight: bold;
 }
 .list-table {
