--- a/assets/dndtime.css
+++ b/assets/dndtime.css
@@ -66,10 +66,12 @@ h4 {
 	text-align: left;
 	color: black;
 	margin-top: 10px;
+	margin-bottom: 0px !important;
 }
 h5 {
 	font-size: 28px;
 	margin-top: 10px !important;
+	margin-bottom: 0px !important;
 }
 html, body {
 	margin: 0;
